Revert "[systeminfo] Reduce code complexity as well garbage collection (#16838)"
This reverts commit 6e77a49c2c0e931c3cc7dc5dc06fb4fe09f956f7.