@@ -16,12 +16,14 @@ import static org.openhab.binding.systeminfo.internal.SystemInfoBindingConstants
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
@@ -41,6 +43,7 @@ import org.openhab.core.thing.Thing;
 import org.openhab.core.thing.ThingStatus;
 import org.openhab.core.thing.ThingStatusDetail;
 import org.openhab.core.thing.ThingTypeUID;
+import org.openhab.core.thing.ThingUID;
 import org.openhab.core.thing.binding.BaseThingHandler;
 import org.openhab.core.thing.binding.builder.ThingBuilder;
 import org.openhab.core.thing.type.ChannelGroupDefinition;
@@ -100,6 +103,12 @@ public class SystemInfoHandler extends BaseThingHandler {
      */
     public static final int WAIT_TIME_CHANNEL_ITEM_LINK_INIT = 1;
 
+    /**
+     * String used to extend thingUID and channelGroupTypeUID for thing definition with added dynamic channels and
+     * extended channels. It is set in the constructor and unique to the thing.
+     */
+    public final String idExtString;
+
     public final SystemInfoThingTypeProvider thingTypeProvider;
 
     private SystemInfoInterface systeminfo;
@@ -126,6 +135,8 @@ public class SystemInfoHandler extends BaseThingHandler {
         super(thing);
         this.thingTypeProvider = thingTypeProvider;
         this.systeminfo = systeminfo;
+
+        idExtString = "-" + thing.getUID().getId();
     }
 
     @Override
@@ -195,7 +206,6 @@ public class SystemInfoHandler extends BaseThingHandler {
             properties.put(PROPERTY_OS_FAMILY, systeminfo.getOsFamily().toString());
             properties.put(PROPERTY_OS_MANUFACTURER, systeminfo.getOsManufacturer().toString());
             properties.put(PROPERTY_OS_VERSION, systeminfo.getOsVersion().toString());
-
             updateProperties(properties);
             logger.debug("Properties updated!");
             return true;
@@ -212,36 +222,43 @@ public class SystemInfoHandler extends BaseThingHandler {
      * and are equal to the channel groups and channels with index 0. If there is only one entity in a group, do not add
      * a channels group and channels with index 0.
      * <p>
-     * If channel groups are added, the thing type will change to
-     * {@link org.openhab.binding.systeminfo.internal.SystemInfoBindingConstants#THING_TYPE_COMPUTER_IMPL
-     * computer-impl}. A new handler will be created and initialization restarted.
-     * Therefore further initialization of the current handler can be aborted if the method returns true.
+     * If channel groups are added, the thing type will change to systeminfo:computer-Ext, with Ext equal to the thing
+     * id. A new handler will be created and initialization restarted. Therefore further initialization of the current
+     * handler can be aborted if the method returns true.
      *
      * @return true if channel groups where added
      */
     private boolean addDynamicChannels() {
+        ThingUID thingUID = thing.getUID();
+
         List<ChannelGroupDefinition> newChannelGroups = new ArrayList<>();
-        addChannelGroups(CHANNEL_GROUP_STORAGE, CHANNEL_GROUP_TYPE_STORAGE, systeminfo.getFileOSStoreCount(),
-                newChannelGroups);
-        addChannelGroups(CHANNEL_GROUP_DRIVE, CHANNEL_GROUP_TYPE_DRIVE, systeminfo.getDriveCount(), newChannelGroups);
-        addChannelGroups(CHANNEL_GROUP_DISPLAY, CHANNEL_GROUP_TYPE_DISPLAY, systeminfo.getDisplayCount(),
-                newChannelGroups);
-        addChannelGroups(CHANNEL_GROUP_BATTERY, CHANNEL_GROUP_TYPE_BATTERY, systeminfo.getPowerSourceCount(),
-                newChannelGroups);
-        addChannelGroups(CHANNEL_GROUP_NETWORK, CHANNEL_GROUP_TYPE_NETWORK, systeminfo.getNetworkIFCount(),
-                newChannelGroups);
+        newChannelGroups.addAll(createChannelGroups(thingUID, CHANNEL_GROUP_STORAGE, CHANNEL_GROUP_TYPE_STORAGE,
+                systeminfo.getFileOSStoreCount()));
+        newChannelGroups.addAll(createChannelGroups(thingUID, CHANNEL_GROUP_DRIVE, CHANNEL_GROUP_TYPE_DRIVE,
+                systeminfo.getDriveCount()));
+        newChannelGroups.addAll(createChannelGroups(thingUID, CHANNEL_GROUP_DISPLAY, CHANNEL_GROUP_TYPE_DISPLAY,
+                systeminfo.getDisplayCount()));
+        newChannelGroups.addAll(createChannelGroups(thingUID, CHANNEL_GROUP_BATTERY, CHANNEL_GROUP_TYPE_BATTERY,
+                systeminfo.getPowerSourceCount()));
+        newChannelGroups.addAll(createChannelGroups(thingUID, CHANNEL_GROUP_NETWORK, CHANNEL_GROUP_TYPE_NETWORK,
+                systeminfo.getNetworkIFCount()));
         if (!newChannelGroups.isEmpty()) {
             logger.debug("Creating additional channel groups");
             newChannelGroups.addAll(0, thingTypeProvider.getChannelGroupDefinitions(thing.getThingTypeUID()));
-            thingTypeProvider.updateThingType(THING_TYPE_COMPUTER_IMPL, newChannelGroups);
-            logger.trace("Channel groups were added, changing the thing type");
-            changeThingType(THING_TYPE_COMPUTER_IMPL, thing.getConfiguration());
+            ThingTypeUID thingTypeUID = new ThingTypeUID(BINDING_ID, THING_TYPE_COMPUTER_ID + idExtString);
+            if (thingTypeProvider.updateThingType(thingTypeUID, newChannelGroups)) {
+                logger.trace("Channel groups were added, changing the thing type");
+                changeThingType(thingTypeUID, thing.getConfiguration());
+            } else {
+                updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.HANDLER_INITIALIZING_ERROR,
+                        "@text/offline.cannot-initialize");
+            }
             return true;
         }
 
         List<Channel> newChannels = new ArrayList<>();
-        addChannels(CHANNEL_SENSORS_FAN_SPEED, systeminfo.getFanCount(), newChannels);
-        addChannels(CHANNEL_CPU_FREQ, systeminfo.getCpuLogicalCores().intValue(), newChannels);
+        newChannels.addAll(createChannels(thingUID, CHANNEL_SENSORS_FAN_SPEED, systeminfo.getFanCount()));
+        newChannels.addAll(createChannels(thingUID, CHANNEL_CPU_FREQ, systeminfo.getCpuLogicalCores().intValue()));
         if (!newChannels.isEmpty()) {
             logger.debug("Creating additional channels");
             newChannels.addAll(0, thing.getChannels());
@@ -253,38 +270,47 @@ public class SystemInfoHandler extends BaseThingHandler {
         return false;
     }
 
-    private void addChannelGroups(String channelGroupID, String channelGroupTypeID, int count,
-            List<ChannelGroupDefinition> groups) {
+    private List<ChannelGroupDefinition> createChannelGroups(ThingUID thingUID, String channelGroupID,
+            String channelGroupTypeID, int count) {
         if (count <= 1) {
-            return;
+            return Collections.emptyList();
         }
 
         List<String> channelGroups = thingTypeProvider.getChannelGroupDefinitions(thing.getThingTypeUID()).stream()
-                .map(ChannelGroupDefinition::getId).toList();
+                .map(ChannelGroupDefinition::getId).collect(Collectors.toList());
 
+        List<ChannelGroupDefinition> newChannelGroups = new ArrayList<>();
         for (int i = 0; i < count; i++) {
             String index = String.valueOf(i);
             ChannelGroupDefinition channelGroupDef = thingTypeProvider
                     .createChannelGroupDefinitionWithIndex(channelGroupID, channelGroupTypeID, i);
             if (!(channelGroupDef == null || channelGroups.contains(channelGroupID + index))) {
                 logger.trace("Adding channel group {}", channelGroupID + index);
-                groups.add(channelGroupDef);
+                newChannelGroups.add(channelGroupDef);
             }
         }
+        return newChannelGroups;
     }
 
-    private void addChannels(String channelID, int count, List<Channel> channels) {
+    private List<Channel> createChannels(ThingUID thingUID, String channelID, int count) {
         if (count <= 1) {
-            return;
+            return Collections.emptyList();
         }
 
+        List<Channel> newChannels = new ArrayList<>();
         for (int i = 0; i < count; i++) {
             Channel channel = thingTypeProvider.createChannelWithIndex(thing, channelID, i);
             if (channel != null && thing.getChannel(channel.getUID()) == null) {
                 logger.trace("Creating channel {}", channel.getUID().getId());
-                channels.add(channel);
+                newChannels.add(channel);
             }
         }
+        return newChannels;
+    }
+
+    private void storeChannelsConfig() {
+        logger.trace("Storing channel configurations");
+        thingTypeProvider.storeChannelsConfig(thing);
     }
 
     private void restoreChannelsConfig() {
@@ -776,11 +802,9 @@ public class SystemInfoHandler extends BaseThingHandler {
         publishDataForChannel(channel.getUID());
     }
 
-    // Don't remove this override. If absent channels will not be populated properly
     @Override
     protected void changeThingType(ThingTypeUID thingTypeUID, Configuration configuration) {
-        logger.trace("Storing channel configurations");
-        thingTypeProvider.storeChannelsConfig(thing);
+        storeChannelsConfig();
         super.changeThingType(thingTypeUID, configuration);
     }
 
